# surah-splitter

./: .gitignore  TESTING.md  pyproject.toml  pytest.ini  run_tests.py
docs/: ayah_words_matching_brainstormed_solutions.md  ayah_words_matching_problem.md
src/surah_splitter/: __init__.py
src/surah_splitter/app/: main_cli.py
src/surah_splitter/models/: all_models.py  transcription.py
src/surah_splitter/quran_toolkit/: ayah_matcher.py  surah_processor.py
src/surah_splitter/services/: ayah_matching_service.py  pipeline_service.py  quran_metadata_service.py  segmentation_service.py  transcription_service.py
src/surah_splitter/utils/: app_logger.py  file_utils.py  paths.py
src/surah_splitter_new/app/: main_cli.py
src/surah_splitter_new/models/: __init__.py  alignment.py  transcription.py
src/surah_splitter_new/services/: ayah_matching_service.py  pipeline_service.py  quran_metadata_service.py  segmentation_service.py  transcription_service.py
src/surah_splitter_new/utils/: app_logger.py  file_utils.py
src/surah_splitter_old/: __init__.py
src/surah_splitter_old/app/: main_cli.py
src/surah_splitter_old/quran_toolkit/: ayah_matcher.py  surah_processor.py
src/surah_splitter_old/utils/: app_logger.py
tests/: __init__.py
tests/fixtures/: conftest.py
tests/integration/: test_pipeline_service.py
tests/unit/: test_ayah_matching_service.py  test_ayah_matching_word_spans.py  test_quran_metadata_service.py  test_transcription_service.py
